--- a/app/src/main/res/layout/my_home_fragment.xml
+++ b/app/src/main/res/layout/my_home_fragment.xml
@@ -6,8 +6,8 @@
     tools:context=".MyHomeFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
-
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 </FrameLayout>
