--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,11 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_search"
-        android:title="Search"
-        android:icon="@drawable/ic_baseline_search_24"
-        app:showAsAction="always|collapseActionView"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        />
+    <group >
+        <item
+            android:id="@+id/action_search"
+            android:icon="@drawable/ic_baseline_search_24"
+            android:title="@string/search"
+            app:actionViewClass="androidx.appcompat.widget.SearchView"
+            app:showAsAction="always|collapseActionView" />
+        <item
+            android:icon="@drawable/ic_baseline_filter_list_24"
+            android:title="@string/filter"
+            app:showAsAction="ifRoom|collapseActionView" />
+    </group>
 
 </menu>
