--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/subjectFragment"
         android:icon="@drawable/ic_baseline_school"
-        android:title="Subjects" />
+        android:title="@string/subjects" />
     <item
         android:id="@+id/mapFragment"
         android:icon="@drawable/ic_baseline_my_location"
-        android:title="UniMap" />
+        android:title="@string/unimap" />
     <item
         android:id="@+id/myHomeFragment"
         android:icon="@drawable/ic_baseline_emoji_people"
-        android:title="Me" />
+        android:title="@string/me" />
 
 </menu>
