--- a/app/src/main/res/layout/login_tab_frag.xml
+++ b/app/src/main/res/layout/login_tab_frag.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/editext_bg"
-        android:hint="Email"
+        android:hint="Username"
         android:maxLines="1"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
@@ -41,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/username"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintWidth_percent=".8" />
 
