--- a/app/src/main/res/navigation/navigation_b.xml
+++ b/app/src/main/res/navigation/navigation_b.xml
@@ -15,9 +15,9 @@
         android:name="com.example.unimelborientation.MapFragment"
         android:label="UniMap"
         tools:layout="@layout/map_fragment" />
-    <fragment
-        android:id="@+id/myHomeFragment"
-        android:name="com.example.unimelborientation.MyHomeFragment"
-        android:label="Me"
-        tools:layout="@layout/my_home_fragment" />
+<!--    <fragment-->
+<!--        android:id="@+id/myHomeFragment"-->
+<!--        android:name="com.example.unimelborientation.MyHomeFragment"-->
+<!--        android:label="Me"-->
+<!--        tools:layout="@layout/my_home_fragment" />-->
 </navigation>
